table of distances ready

--- a/js-eulumdat/public_html/index.html
+++ b/js-eulumdat/public_html/index.html
@@ -33,7 +33,7 @@
           this.distanceTable = [];
           this.maintenanceFactor = 0.8; // Wartungsfaktor
           
-          this.mod = 43;
+          this.mod = 43; // TODO this could be done better
           
           this.rawData = "";
           this.arrData = "";
