--- a/js-eulumdat/public_html/index.html
+++ b/js-eulumdat/public_html/index.html
@@ -35,7 +35,7 @@
           this.distanceTable = [];
           this.maintenanceFactor = 0.8; // Wartungsfaktor
           
-          this.mod = 43; // TODO this could be done better
+          this.mod = 43; // TODO this could be really done better
           
           this.rawData = "";
           this.arrData = "";
